--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,6 @@
 	"ts-node": {
 		"files": true
 	},
-	"include": ["src"],
+	"include": ["src", "types.d.ts"],
 	"exclude": ["node_modules", "dist", "__tests__", "docs", ".github", "dev", ".vscode"]
 }
