--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@filen/s3",
-	"version": "0.2.16",
+	"version": "0.2.17",
 	"description": "Filen S3",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
@@ -13,7 +13,8 @@
 		"clear": "rimraf ./dist",
 		"build": "npm run clear && npm run lint && npm run tsc",
 		"dev": "tsx ./dev/index.ts",
-		"yalc": "npm run build && yalc push"
+		"yalc": "npm run build && yalc push",
+		"install:filen": "npm install @filen/sdk@latest"
 	},
 	"repository": {
 		"type": "git",
@@ -50,7 +51,7 @@
 		"typescript": "^5.3.3"
 	},
 	"dependencies": {
-		"@filen/sdk": "^0.1.138",
+		"@filen/sdk": "^0.1.139",
 		"aws-sdk": "^2.1636.0",
 		"body-parser": "^1.20.2",
 		"dayjs": "^1.11.11",
