--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@filen/s3",
-	"version": "0.2.21",
+	"version": "0.2.22",
 	"description": "Filen S3",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
@@ -39,6 +39,7 @@
 		"@types/lodash": "^4.14.202",
 		"@types/mime-types": "^2.1.4",
 		"@types/uuid": "^9.0.8",
+		"@types/write-file-atomic": "^4.0.3",
 		"@types/xml2js": "^0.4.14",
 		"@typescript-eslint/eslint-plugin": "^6.20.0",
 		"@typescript-eslint/parser": "^6.20.0",
@@ -61,6 +62,7 @@
 		"mime-types": "^2.1.35",
 		"selfsigned": "^2.4.1",
 		"uuid": "^9.0.1",
+		"write-file-atomic": "^5.0.1",
 		"xml-js-builder": "^1.0.3",
 		"xml2js": "^0.6.2"
 	}
