--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
 		"body-parser": "^1.20.2",
 		"dayjs": "^1.11.11",
 		"express": "^4.19.2",
+		"express-rate-limit": "^7.4.0",
 		"fs-extra": "^11.2.0",
 		"mime-types": "^2.1.35",
 		"selfsigned": "^2.4.1",
