--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@filen/s3",
-	"version": "0.2.33",
+	"version": "0.2.34",
 	"description": "Filen S3",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
@@ -52,7 +52,7 @@
 		"typescript": "^5.3.3"
 	},
 	"dependencies": {
-		"@filen/sdk": "^0.1.163",
+		"@filen/sdk": "^0.1.164",
 		"aws-sdk": "^2.1636.0",
 		"body-parser": "^1.20.2",
 		"dayjs": "^1.11.11",
@@ -60,6 +60,8 @@
 		"express-rate-limit": "^7.4.0",
 		"fs-extra": "^11.2.0",
 		"mime-types": "^2.1.35",
+		"pino": "^9.4.0",
+		"rotating-file-stream": "^3.2.3",
 		"selfsigned": "^2.4.1",
 		"uuid": "^9.0.1",
 		"write-file-atomic": "^5.0.1",
