--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@filen/s3",
-	"version": "0.2.42",
+	"version": "0.2.43",
 	"description": "Filen S3",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
@@ -53,7 +53,8 @@
 	},
 	"dependencies": {
 		"@filen/sdk": "^0.1.175",
-		"aws-sdk": "^2.1636.0",
+		"aws-sdk": "^2.1692.0",
+		"aws4-express": "^0.10.1",
 		"body-parser": "^1.20.2",
 		"dayjs": "^1.11.11",
 		"express": "^4.19.2",
