--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@filen/s3",
-	"version": "0.2.47",
+	"version": "0.2.48",
 	"description": "Filen S3",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
@@ -54,7 +54,7 @@
 	"dependencies": {
 		"@filen/sdk": "^0.1.189",
 		"aws-sdk": "^2.1692.0",
-		"aws4-express": "^0.10.1",
+		"aws4-express": "github:FilenCloudDienste/aws4-express",
 		"body-parser": "^1.20.2",
 		"dayjs": "^1.11.11",
 		"express": "^4.19.2",
