--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@filen/s3",
-	"version": "0.2.50",
+	"version": "0.2.51",
 	"description": "Filen S3",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
@@ -14,7 +14,7 @@
 		"build": "npm run clear && npm run lint && npm run tsc",
 		"dev": "tsx ./dev/index.ts",
 		"yalc": "npm run build && yalc push",
-		"install:filen": "npm install @filen/sdk@latest"
+		"install:filen": "npm install @filen/sdk@latest @filen/aws4-express@latest"
 	},
 	"repository": {
 		"type": "git",
@@ -52,9 +52,9 @@
 		"typescript": "^5.3.3"
 	},
 	"dependencies": {
-		"@filen/sdk": "^0.1.191",
+		"@filen/aws4-express": "^0.10.2",
+		"@filen/sdk": "^0.1.192",
 		"aws-sdk": "^2.1692.0",
-		"aws4-express": "github:FilenCloudDienste/aws4-express",
 		"body-parser": "^1.20.2",
 		"dayjs": "^1.11.11",
 		"express": "^4.19.2",
